// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a promo 1`] = `
<div
  className="section-block"
>
  <div
    className="layout layout--a"
  >
    <div
      className="region region--a"
    >
      <div
        className="region-inner"
      >
        <article
          className="block block--size-a promo-test"
          id="id789"
        >
          <h1>
            Test Promo
          </h1>
          <p>
            some text for this promo
          </p>
          <a
            href="#"
          >
            Link to something
          </a>
        </article>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render an empty promo 1`] = `
<div
  className="section-block"
>
  <div
    className="layout layout--a"
  >
    <div
      className="region region--a"
    >
      <div
        className="region-inner"
      >
        <article
          className="block block--size-a promo-test"
          id={undefined}
        >
          <h1 />
          <p />
        </article>
      </div>
    </div>
  </div>
</div>
`;
